--- a/src/app/main/contract-template/contract-template.component.scss
+++ b/src/app/main/contract-template/contract-template.component.scss
@@ -23,7 +23,7 @@
   font-size: 16px;
   color: #001A4D;
   cursor: pointer;
-  white-space: pre-wrap;
+  // white-space: pre-wrap;
 }
 
 .item_contract_infor{
@@ -292,7 +292,7 @@
   
   .col-xxl-1 {
     flex: 0 0 auto;
-    width: 6.3333333333%;
+    width: 5.3333333333%;
   }
   
 }
