--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -105,11 +105,11 @@
                 </div>
               </div>
 
-              <!-- <div *ngIf="this.type != 1" class="form-group forgot-password">
+              <div *ngIf="this.type != 1" class="form-group forgot-password">
                 <a href="/forgot-password" 
                   >{{ "login.forgot_password" | translate }}?</a
                 >
-              </div> -->
+              </div>
 
               <div class="form-group" style="padding-bottom: 15px;">
                 <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center">
@@ -278,11 +278,11 @@
               </div>
             </div>
 
-            <!-- <div class="form-group forgot-password">
+            <div class="form-group forgot-password">
               <a href="/forgot-password"
                 >{{ "login.forgot_password" | translate }}?
               </a>
-            </div> -->
+            </div>
 
             <div class="form-group" style="padding-bottom: 15px;">
               <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center">
