Sửa lỗi action nút tạo ngay ở màn hình ở giao diện Xin chào

--- a/src/app/main/contract/add-contract/add-contract.component.html
+++ b/src/app/main/contract/add-contract/add-contract.component.html
@@ -10,7 +10,8 @@
     <app-contract-batch-header *ngIf="type == 3 && (isQLHD_15 || this.action == 'edit')" #contractHeader [AddComponent]="this" [datasBatch]="datasBatch" [stepBatch]="stepBatch"
         (messageEvent)="receiveMessage($event)"></app-contract-batch-header>
 
-    <div class="row" style="margin: 0" *ngIf="this.action == 'add'">
+        <!-- <div class="row" style="margin: 0" *ngIf="this.action == 'add'"> -->
+        <div class="row" style="margin: 0">
         <div class="radio col-md-4 label_type" *ngIf="isQLHD_01">
             <label>
                 <input type="radio" name="contract_create" [value]="1" [(ngModel)]="type"
